--- a/src/style.css
+++ b/src/style.css
@@ -590,3 +590,266 @@ dotlottie-wc {
   border-bottom: none;
 }
 
+
+
+
+/* Page ges avion */
+
+.info__ges__avion {
+  background-color: var(--color-purple);
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__ges__avion__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 0;
+}
+
+.info__ges__avion__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 25rem;
+
+}
+
+.info__ges__avion__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__ges__avion__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__ges__avion__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE (Côté Droit) --- */
+
+.info__ges__avion__bulle::before {
+  content: "";
+  position: absolute;
+  right: 150px; 
+  left: auto; 
+  
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__ges__avion__bulle::after {
+  content: "";
+  position: absolute;
+  right: 152px; 
+  left: auto; 
+  
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  
+  border-top: 20px solid var(--color-purple); 
+  border-bottom: none;
+}
+
+
+/* Page ile */
+
+.info__ile {
+  background-color: var(--color-green);
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__ile__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 0;
+}
+
+.info__ile__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.info__ile__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__ile__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__ile__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE (Côté Droit) --- */
+
+.info__ile__bulle::before {
+  content: "";
+  position: absolute;
+  left: 40px;
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__ile__bulle::after {
+  content: "";
+  position: absolute;
+  left: 42px;
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  border-top: 20px solid var(--color-green);
+  border-bottom: none;
+}
+
+
+
+/* Page feu */
+
+.info__feu {
+  background-color: var(--color-blue-light);
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__feu__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 0;
+}
+
+.info__feu__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.info__feu__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__feu__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__feu__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE (Côté Droit) --- */
+
+.info__feu__bulle::before {
+  content: "";
+  position: absolute;
+  left: 40px;
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__feu__bulle::after {
+  content: "";
+  position: absolute;
+  left: 42px;
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  border-top: 20px solid var(--color-blue-light);
+  border-bottom: none;
+}
