--- a/src/style.css
+++ b/src/style.css
@@ -60,18 +60,22 @@ body {
 
 .presentation__fig__bulle {
   position: relative;
-  width: 600px;
+  width: 500px;
   min-height: 300px;
-  padding: 3rem;
+  padding: 2rem;
   border: 2px solid var(--color-black);
   border-radius: 24px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .presentation__fig__desc {
   font-family: var(--font-sans);
   font-size: 2.5rem;
   color: var(--color-black);
-  max-width: 480px;
+  margin: 0;
 }
 
 /* QUEUE DE BULLE */
@@ -98,6 +102,7 @@ body {
   border-bottom: 16px solid transparent;
   border-right: 20px solid var(--color-green);
 }
+
 
 /* --- SCROLL HORIZONTAL STRUCTURE --- */
 
@@ -851,5 +856,452 @@ dotlottie-wc {
   border-left: 16px solid transparent;
   border-right: 16px solid transparent;
   border-top: 20px solid var(--color-blue-light);
+  border-bottom: none;
+}
+
+
+
+/* Page info ges */
+
+.info__rechauffement {
+  background-color: var(--color-pink);
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__rechauffement__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.info__rechauffement__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 2rem;
+}
+
+.info__rechauffement__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__rechauffement__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__rechauffement__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE --- */
+
+.info__rechauffement__bulle::before {
+  content: "";
+  position: absolute;
+  left: 40px;
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__rechauffement__bulle::after {
+  content: "";
+  position: absolute;
+  left: 42px;
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  border-top: 20px solid var(--color-pink);
+  border-bottom: none;
+}
+
+
+
+
+/* Page pandemie */
+.info__pandemie {
+  background-color: var(--color-red-light);
+  display: flex;
+  flex-direction: row-reverse;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__pandemie__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 0;
+}
+
+.info__pandemie__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 25rem;
+
+}
+
+.info__pandemie__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__pandemie__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__pandemie__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE (Côté Droit) --- */
+
+.info__pandemie__bulle::before {
+  content: "";
+  position: absolute;
+  right: 150px; 
+  left: auto; 
+  
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__pandemie__bulle::after {
+  content: "";
+  position: absolute;
+  right: 152px; 
+  left: auto; 
+  
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  
+  border-top: 20px solid var(--color-red-light); 
+  border-bottom: none;
+}
+
+/* Page eco */
+
+.presentation__eco {
+  background-color: var(--color-green-light);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block: 9.5rem;
+}
+
+.presentation__eco__fig {
+  display: flex;
+  align-items: flex-end;
+  gap: 4rem;
+}
+
+.presentation__eco__fig__img {
+  width: 260px;
+  height: auto;
+}
+
+.presentation__eco__fig__bulle {
+  position: relative;
+  width: 500px;
+  min-height: 300px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 24px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.presentation__eco__fig__desc {
+  font-family: var(--font-sans);
+  font-size: 2.5rem;
+  color: var(--color-black);
+  margin: 0;
+}
+
+.presentation__eco__fig__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* QUEUE DE BULLE */
+.presentation__eco__fig__bulle::before {
+  content: "";
+  position: absolute;
+  left: -22px;
+  bottom: 40px;
+  width: 0;
+  height: 0;
+  border-top: 18px solid transparent;
+  border-bottom: 18px solid transparent;
+  border-right: 22px solid var(--color-black);
+}
+
+.presentation__eco__fig__bulle::after {
+  content: "";
+  position: absolute;
+  left: -19px;
+  bottom: 40px;
+  width: 0;
+  height: 0;
+  border-top: 16px solid transparent;
+  border-bottom: 16px solid transparent;
+  border-right: 20px solid var(--color-green-light);
+}
+
+
+/* Page billets */
+
+.info__billet {
+  background-color: var(--color-yellow-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+.billet1{
+
+}
+
+.billet2{
+
+}
+
+
+/* Page france */
+.info__france {
+  background-color: var(--color-blue-light);
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__france__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 5rem;
+  margin-right: 8rem;
+}
+
+.info__france__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 2rem;
+}
+
+.info__france__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__france__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__france__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE --- */
+
+.info__france__bulle::before {
+  content: "";
+  position: absolute;
+  left: 40px;
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__france__bulle::after {
+  content: "";
+  position: absolute;
+  left: 42px;
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  border-top: 20px solid var(--color-blue-light);
+  border-bottom: none;
+}
+
+
+/* Page touriste etranger */
+
+.info__touriste_etranger {
+  background-color: var(--color-purple);
+  display: flex;
+  flex-direction: row-reverse;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* CONTENEUR GAUCHE (Bulle + Mascotte) */
+.info__touriste_etranger__fig {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+
+  margin-left: 0;
+}
+
+.info__touriste_etranger__img {
+  width: 180px;
+  height: auto;
+  margin-top: 1rem;
+  margin-left: 25rem;
+
+}
+
+.info__touriste_etranger__bulle {
+  position: relative;
+  width: 500px;
+  padding: 2rem;
+  border: 2px solid var(--color-black);
+  border-radius: 12px;
+  background-color: transparent;
+}
+
+.info__touriste_etranger__desc {
+  font-family: var(--font-sans);
+  font-size: 1.9rem;
+  color: var(--color-black);
+  margin: 0;
+  line-height: 1.3;
+}
+
+.info__touriste_etranger__desc span {
+  font-family: var(--font-display);
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* --- QUEUE DE BULLE (Côté Droit) --- */
+
+.info__touriste_etranger__bulle::before {
+  content: "";
+  position: absolute;
+  right: 150px; 
+  left: auto; 
+  
+  bottom: -22px;
+  width: 0;
+  height: 0;
+
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 22px solid var(--color-black); 
+  border-bottom: none;
+}
+
+.info__touriste_etranger__bulle::after {
+  content: "";
+  position: absolute;
+  right: 152px; 
+  left: auto; 
+  
+  bottom: -19px;
+  width: 0;
+  height: 0;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  
+  border-top: 20px solid var(--color-purple); 
   border-bottom: none;
 }
